// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguageDetectService detect should detect russian 1`] = `
[
  {
    "accuracy": 1,
    "lang": "ru",
  },
]
`;

exports[`LanguageDetectService detect should detect surzhik as ukrainian 1`] = `
[
  {
    "accuracy": 1,
    "lang": "uk",
  },
]
`;

exports[`LanguageDetectService detect should detect ukrainian 1`] = `
[
  {
    "accuracy": 1,
    "lang": "uk",
  },
]
`;

exports[`LanguageDetectService detect should not detect russian when mixed 1`] = `
[
  {
    "accuracy": 1,
    "lang": "uk",
  },
]
`;

exports[`LanguageDetectService isRussian should except ukrainian for all messages 1`] = `
[
  [
    {
      "accuracy": 0.18993,
      "lang": "ru",
    },
    {
      "accuracy": 0.18524000000000002,
      "lang": "uk",
    },
  ],
  [
    {
      "accuracy": 0.125,
      "lang": "ru",
    },
    {
      "accuracy": 0.1076,
      "lang": "uk",
    },
  ],
  [
    {
      "accuracy": 1,
      "lang": "uk",
    },
  ],
  [
    {
      "accuracy": 1,
      "lang": "uk",
    },
  ],
  [
    {
      "accuracy": 1,
      "lang": "uk",
    },
  ],
  [
    {
      "accuracy": 1,
      "lang": "uk",
    },
  ],
  [
    {
      "accuracy": 0.125,
      "lang": "uk",
    },
    {
      "accuracy": 0.10893749999999999,
      "lang": "ru",
    },
  ],
  [
    {
      "accuracy": 1,
      "lang": "uk",
    },
  ],
]
`;
